syntax = "proto3";

import "proto/invocation.proto";
import "proto/user.proto";

package buildbuddy.service;

service BuildBuddyService {
  rpc GetInvocation(invocation.GetInvocationRequest)
      returns (invocation.GetInvocationResponse);

  rpc SearchInvocation(invocation.SearchInvocationRequest)
      returns (invocation.SearchInvocationResponse);

  rpc GetUser(user.GetUserRequest)
      returns (user.GetUserResponse);

  rpc ModifyUser(user.ModifyUserRequest)
      returns (user.ModifyUserResponse);
}
